# chad-apps

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  compose.yaml  compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml
accounts/backend/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  conanfile.py
accounts/backend/conan/: bcrypt.py
accounts/backend/src/: main.cpp  state.h
accounts/frontend/: Dockerfile  package-lock.json
auth_app/: package.json
auth_app/src/: App.tsx  index.css
auth_app/src/components/: Input.tsx  LineForm.tsx  PageBase.tsx  PageBg.tsx  PrimaryButton.tsx  SecondaryButton.tsx
auth_app/src/pages/: ConsentPage.tsx  LoginPage.tsx  RegisterPage.tsx  RootPage.tsx
auth_app/src/state/: DarkMode.tsx
auth_frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
auth_frontend/src/: App.tsx
auth_frontend/src/components/: Input.tsx  LineForm.tsx  PageBase.tsx  PageBg.tsx  PrimaryButton.tsx  SecondaryButton.tsx
auth_frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx
auth_proxy/: .dockerignore  CMakeLists.txt  Makefile
auth_proxy/.devcontainer/: devcontainer.json
auth_proxy/docker/: app.dockerfile  build-environment.dockerfile  dev-environment.dockerfile
auth_proxy/src/: main.cpp  state.h
auth_proxy/src/common/: base_handler.h  logging.h  state.h  token_manager.h
auth_proxy/src/methods/: log_in.h  log_out.h  refresh.h  sign_up.h
auth_proxy/src/server/: options.h
auth_service/: Makefile  README.md  go.mod  go.sum  run.sh
auth_service/cmd/: auth_service.go
auth_service/internal/config/: config.go
auth_service/internal/env/: environment.go
auth_service/internal/flag/: flag.go
auth_service/internal/handlers/: consent.go  deny_login.go  login.go  register.go  start_login.go
auth_service/internal/http/: consent.go  deny_login.go  http_server.go  login.go  register.go  start_login.go
auth_service/internal/ory/: ory.go
auth_service/internal/pg/: postgres.go
database/: init.sql
deploy/: Makefile  README.md
deploy/auth_app/: Dockerfile  nginx.conf
deploy/auth_service/: Dockerfile
deploy/compose/prod/: compose.yml
deploy/dev_build/: Makefile  compose.yml
deploy/dev_build/api_proxy/: nginx.conf
deploy/docker/auth_frontend/: Dockerfile
deploy/docker/auth_service/: Dockerfile
deploy/docker/onboarding_service/: Dockerfile
deploy/docker/training_service/: Dockerfile  fast.dockerfile
deploy/hydra/: hydra.yml
deploy/k8s/: Makefile
deploy/k8s/chad-apps-chart/: Chart.yaml  Makefile  values-example.yaml
deploy/k8s/helmfile.d/: 01-dependencies.yaml  02-dependencies.yaml  03-charts.yaml
deploy/k8s/jobs/: Chart.yaml
deploy/k8s/values/: hydra.yaml
docker/postgresdb/init/: init.sh
gateway/: .gitignore  CMakeLists.txt  Makefile
gateway/.devcontainer/: devcontainer.json
gateway/configs/: config_vars.testsuite.yaml  static_config.yaml
gateway/docker/: base.dockerfile  build.dockerfile
gateway/scripts/docker/: build.dockerfile  dev.dockerfile
gateway/src/: main.cpp
gateway/tests/: test_hello.py
libraries/frontend_common/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
libraries/frontend_common/src/: index.ts
libraries/go_common/: README.md  go.mod
onboarding_app/: index.html  package.json  vite.config.ts
onboarding_app/src/: App.tsx  utils.tsx
onboarding_app/src/components/: ButtonWithDropdown.tsx  DaySelector.tsx  DynamicWidthInput.tsx  Header.tsx  IntervalSelector.tsx  NavBar.tsx  PageBg.tsx  blocks.tsx
onboarding_app/src/directives/: clickOutside.tsx
onboarding_app/src/pages/: DeploymentsPage.tsx  LoggedInPage.tsx  NotLoggedInPage.tsx  PlansPage.tsx
onboarding_app/src/state/: EditorContext.tsx  UserContext.tsx
onboarding_frontend/: .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
onboarding_frontend/src/: App.tsx  index.css
onboarding_frontend/src/components/: ButtonWithDropdown.tsx  DaySelector.tsx  Header.tsx  IntervalSelector.tsx  NavBar.tsx  PageBg.tsx  blocks.tsx
onboarding_frontend/src/pages/: DeploymentsPage.tsx  EditPlanPage.tsx  LoggedInPage.tsx  NotFoundPage.tsx  NotLoggedInPage.tsx  PlansPage.tsx
onboarding_service/: Dockerfile  Makefile  README.md  go.mod  go.sum
onboarding_service/cmd/: onboarding_service.go
tools/openapi_processor/: api-before.yaml  api.yaml  package.json  processor.js
training-journal/frontend/: package-lock.json  package.json
training_app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
training_app/src/: App.tsx  buttons.tsx  index.css  utils.tsx
training_frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
training_frontend/src/: App.tsx  app.html  buttons.tsx  fetch.tsx  index.css  index.tsx  utils.tsx
training_service/: .clang-format  CMakeLists.txt  Makefile  README.md  devContainer.dockerfile  docker-compose.yml.local  service.proto
training_service/configs/: static_config.yaml
training_service/postgresql/schemas/: db_1.sql
training_service/schemas/: api.yaml  auth_endpoint.yaml  frontend_config.yaml  workouts.yaml
training_service/spec/api/: spec.yaml
training_service/spec/api/config/: get.yaml
training_service/spec/api/exercise/: post.yaml
training_service/spec/api/exercises/: get.yaml
training_service/spec/api/workout/: get.yaml  post.yaml  put.yaml
training_service/spec/api/workoutLog/: get.yaml  post.yaml
training_service/spec/api/workoutLogs/: get.yaml
training_service/spec/api/workouts/: get.yaml
training_service/spec/common/: exercise.yaml  exercise_log.yaml  muscle_group.yaml  timestamp.yaml  workout.yaml  workout_exercise.yaml  workout_log.yaml
training_service/src/: auth_middleware.cpp  auth_middleware.hpp  config.cpp  config_handler.cpp  config_handler.hpp  exercises.cpp  exercises.hpp  main.cpp  postgres_types.hpp  workout_logs.cpp  workout_logs.hpp  workouts.cpp  workouts.hpp  workouts_handler.cpp
user_frontend/: package.json  vite.config.ts
user_frontend/src/: app.html
(+138 files in other folders)
